--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -45,5 +48,145 @@
       <img src="img/user.jpg" alt="Ира Иванова" class="user-avatar">
     </a>
   </header>
+  <div class="container">
+    <aside class="sidebar">
+      <nav class="nav">
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-home" width="20" height="19">
+                <use xlink:href="img/icons.svg#home"></use>
+              </svg>
+              <span class="nav-text">Home</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-trending" width="20" height="19">
+                <use xlink:href="img/icons.svg#trending"></use>
+              </svg>
+              <span class="nav-text">Trending</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-subscriptions" width="20" height="19">
+                <use xlink:href="img/icons.svg#subscriptions"></use>
+              </svg>
+              <span class="nav-text">Subscriptions</span>
+            </a>
+          </li>
+        </ul>
+     
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-library" width="20" height="16">
+                <use xlink:href="img/icons.svg#library"></use>
+              </svg>
+              <span class="nav-text">Library</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-history" width="20" height="18">
+                <use xlink:href="img/icons.svg#history"></use>
+              </svg>
+              <span class="nav-text">History</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-watchlater" width="17" height="19">
+                <use xlink:href="img/icons.svg#watchlater"></use>
+              </svg>
+              <span class="nav-text">Watch later</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-favourites" width="19" height="18">
+                <use xlink:href="img/icons.svg#favourites"></use>
+              </svg>
+              <span class="nav-text">Favourites</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-likedvideos" width="18" height="17">
+                <use xlink:href="img/icons.svg#likedvideos"></use>
+              </svg>
+              <span class="nav-text">Liked videos</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-music" width="18" height="20">
+                <use xlink:href="img/icons.svg#music"></use>
+              </svg>
+              <span class="nav-text">Music</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-games" width="22" height="16">
+                <use xlink:href="img/icons.svg#games"></use>
+              </svg>
+              <span class="nav-text">Games</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-showmore" width="14" height="8">
+                <use xlink:href="img/icons.svg#showmore"></use>
+              </svg>
+              <span class="nav-text">Show more</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+        <h2 class="nav-title">Subscriptions</h2>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <img src="img/GussieSingleton.png" alt="Photo: Gussie Singleton" class="nav-image">
+              <span class="nav-text">Gussie Singleton</span></a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <img src="img/NoraFrancis.png" alt="Photo: Nora Francis" class="nav-image">
+              <span class="nav-text">Nora Francis</span></a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <img src="img/BelleBriggs.png" alt="Photo: Belle Briggs" class="nav-image">
+              <span class="nav-text">Belle Briggs</span></a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <img src="img/EuniceCortez.png" alt="Photo: Eunice Cortez" class="nav-image">
+              <span class="nav-text">Eunice Cortez</span></a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <img src="img/EmmaHanson.png" alt="Photo: Emma Hanson" class="nav-image">
+              <span class="nav-text">Emma Hanson</span></a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <img src="img/LeahBerry.png" alt="Photo: Leah Berry" class="nav-image">
+              <span class="nav-text">Leah Berry</span></a></li>
+        </ul>
+
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <svg class="icon icon-setting" width="19" height="20">
+                <use xlink:href="img/icons.svg#setting"></use>
+              </svg>
+              <span class="nav-text">Setting</span>
+            </a>
+          </li>
+        </ul>
+
+    </aside>
+    <!-- /.sidebar -->
+  </div>
+  <!-- /.container -->
 </body>
 </html>
